# quercle-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  openapi.json  pyproject.toml
.github/workflows/: publish.yml
quercle/: __init__.py  _base.py  async_client.py  client.py  descriptions.py  exceptions.py  facade.py  tool_metadata.py
quercle/api/api/: extract.py  fetch.py  post_v1_extract.py  post_v1_fetch.py  post_v1_raw_fetch.py  post_v1_raw_search.py  post_v1_search.py  raw_fetch.py  raw_search.py  search.py
quercle/models/: __init__.py  extract_body.py  extract_body_format.py  extract_response_200_type_0.py  extract_response_200_type_1.py  extract_response_400.py  extract_response_401.py  extract_response_402.py  extract_response_429.py  extract_response_429_errors_item.py  extract_response_500.py  fetch_body.py  fetch_response_200.py  fetch_response_400.py  fetch_response_401.py  fetch_response_402.py  fetch_response_429.py  fetch_response_429_errors_item.py  fetch_response_500.py  post_v1_extract_body.py  post_v1_extract_body_format.py  post_v1_extract_response_200_type_0.py  post_v1_extract_response_200_type_1.py  post_v1_extract_response_400.py  post_v1_extract_response_401.py  post_v1_extract_response_402.py  post_v1_extract_response_429.py  post_v1_extract_response_500.py  post_v1_fetch_body.py  post_v1_fetch_response_200.py  post_v1_fetch_response_400.py  post_v1_fetch_response_401.py  post_v1_fetch_response_402.py  post_v1_fetch_response_429.py  post_v1_fetch_response_500.py  post_v1_raw_fetch_body.py  post_v1_raw_fetch_body_format.py  post_v1_raw_fetch_response_200.py  post_v1_raw_fetch_response_400.py  post_v1_raw_fetch_response_401.py  (+48 more)
tests/: conftest.py  test_async_client.py  test_client.py  test_import.py
